# LibPlankAudio

./: .gitignore  CMakeLists.txt  README.md
include/: plankaudio.h
src/: main.cpp  main.h  wave.cpp  wave.h
